--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
