--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "server=192.168.0.9;port=3396;database=activities;uid=root;pwd=870107"
+    "Default": "server=localhost;port=3396;database=activities;uid=root;pwd=870107"
   }
 }
