--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-calendar": "^3.9.0",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
+    "date-fns": "^2.16.1",
+    "formik": "^2.2.9",
+    "ls": "^0.2.1",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
