--- a/client-app/package.json
+++ b/client-app/package.json
@@ -29,7 +29,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
