[Finished] Create indentity logic

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "Default": "server=localhost;port=3396;database=activities;uid=root;pwd=870107"
-  }
+  },
+  "TokenKey": "super secret key"
 }
